Enable creation/removal/listing of cluster
Each project can have different openstack node, network, ssh keys.
cluster.py enables creation of a cluster from a yaml file.
yaml is simple enough to describe the cluster and its components.
See example.yaml for an example.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-pymongo
+apache-libcloud
 argh
-termcolor==1.1.0
-futures==3.0.3
 argparse
+certifi
 colorlog
+futures==3.0.3
 ovh
+paramiko
+pymongo
+python-cinderclient
+python-heatclient
+python-keystoneclient
+python-neutronclient
+python-novaclient
+python-openstackclient
+python-swiftclient
+pyyaml
+tabulate
+termcolor==1.1.0
+twisted
